--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Bosch B and G Control Panel",
   "name": "homebridge-boschcontrolpanel_bgseries",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "description": "Homekit integration for Bosch B and G control panel.",
   "license": "Apache-2.0",
   "repository": {
