--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "name": "homebridge-boschcontrolpanel_bgseries",
   "version": "0.3.0",
   "description": "Homekit integration for Bosch B and G control panel.",
-  "license": "mit",
+  "license": "MIT",
   "repository": {
-    "type": "mit",
+    "type": "git",
     "url": "git://github.com/ehylands/homebridge-boschcontrolpanel_bgseries.git"
   },
   "bugs": {
@@ -33,7 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
-    "homebridge": "^1.3.4",
+    "homebridge": "^1.3.6",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
