--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Bosch B and G Control Panel",
   "name": "homebridge-boschcontrolpanel_bgseries",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Homekit integration for Bosch B and G control panel.",
   "license": "MIT",
   "repository": {
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "minimist": ">=1.2.6"
   }
 }
