--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "displayName": "Bosch B and G Series Control Panel",
+  "displayName": "Bosch Control Panel",
   "name": "homebridge-boschcontrolpanel_bgseries",
   "version": "0.5.2",
-  "description": "Homebridge plugin for Bosch B and G Series Control Panel.",
+  "description": "Homebridge plugin for Bosch Control Panel.",
   "license": "MIT",
   "repository": {
     "type": "git",
