--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "displayName": "Bosch Control Panel",
+  "displayName": "Homebridge Bosch Control Panel",
   "name": "homebridge-boschcontrolpanel_bgseries",
-  "version": "0.7.1",
+  "version": "0.8.0-alpha.0",
   "description": "Homebridge plugin for Bosch Control Panel.",
   "license": "MIT",
   "repository": {
@@ -12,7 +12,7 @@
     "url": "https://github.com/ehylands/homebridge-boschcontrolpanel_bgseries/issues"
   },
   "engines": {
-    "node": ">=14.0.0",
+    "node": ">=15.0.0",
     "homebridge": ">=1.3.0"
   },
   "main": "dist/index.js",
@@ -32,7 +32,10 @@
     "Solution 3000"
   ],
   "dependencies": {
-    "tiny-typed-emitter": "^2.1.0"
+    "homebridge-config-ui-x": "^4.54.1",
+    "promise-socket": "^7.0.0",
+    "tiny-typed-emitter": "^2.1.0",
+    "ts-semaphore": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
@@ -40,10 +43,10 @@
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
     "homebridge": "^1.3.6",
+    "minimist": ">=1.2.6",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2",
-    "minimist": ">=1.2.6"
+    "typescript": "^4.2.2"
   }
 }
