--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Homebridge Bosch Control Panel",
   "name": "homebridge-boschcontrolpanel_bgseries",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Homebridge plugin for Bosch Control Panel.",
   "license": "MIT",
   "repository": {
@@ -12,8 +12,9 @@
     "url": "https://github.com/ehylands/homebridge-boschcontrolpanel_bgseries/issues"
   },
   "engines": {
-    "node": ">=15.0.0",
-    "homebridge": ">=1.3.0"
+    "node": ">=15.0.0 || ^18.20.4 || ^20.15.1",
+    "homebridge": "^1.6.0 || ^2.0.0-beta.0"
+
   },
   "main": "dist/index.js",
   "scripts": {
@@ -42,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
-    "homebridge": "^1.3.6",
+    "homebridge": "^2.0.0-beta.22",
     "minimist": ">=1.2.6",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
